--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="bg-black" />
+    <!--
     <meta
-      name="Gage Personal Website"
+      name="Gage Gabaldon Personal Website"
       content="Web Site Created with React to Serve as a Guide to Gage"
     />
+    -->
+    <meta name="author" content="Gage Gabaldon">
+    <meta name="description" content="Web site created with React to serve as a resume and entry point into the life and projects of Gage Gabaldon.">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
